--- a/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi3.1.2-cuda10.2-cudnn7-ubuntu18.04/Dockerfile
@@ -88,9 +88,9 @@ RUN apt-get update && apt-get install --only-upgrade passwd=1:4.5-1ubuntu2.2 -y 
    apt-get install --only-upgrade uidmap=1:4.5-1ubuntu2.2 -y
 
 # Conda Environment
-ENV MINICONDA_VERSION py37_4.9.2
+ENV MINICONDA_VERSION py38_4.11.0
 ENV PATH /opt/miniconda/bin:$PATH
-RUN wget -qO /tmp/miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh && \
+RUN wget -qO /tmp/miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh && \
     bash /tmp/miniconda.sh -bf -p /opt/miniconda && \
     conda clean -ay && \
     rm -rf /opt/miniconda/pkgs && \
